--- a/prosjekt3/LaTex/prosject3.tex
+++ b/prosjekt3/LaTex/prosject3.tex
@@ -205,7 +205,7 @@ The plot of the path of Jupiter, Earth and the Sun can be seen in figure \ref{f_
 We see that the normal path of Earth and Jupiter are stable, suggesting that the Verlet algorithm we have created is a good aproximation. When Jupiters mass is 10 times stronger there is no noticeable difference in the path. When it is 1000 times stronger, Earth spins around the Sun and Jupiter a couple of times, before shooting out into space, while Jupiter has a stable orbit around the sun. This suggest that the Verlet method is good enough to simulate a stable path when Jupiters mass is 10 times stronger, but not when it is 1000 times stronger. This makes sense as when $1000M_{\text{Jupiter}}$ is about the same as $M_{\odot}$, which would make it pull on Earth as strongly as the Sun. If we hadn't fixed the Sun in the centre of mass, then it and Jupiter would either have an unstable orbit, or we would get something close to a Binary star system.
 
 \subsection{Final model for all planets of the solar system}
-We see that our algorithm produces nice, stable orbits for all the planets. The only planet which seem to not be completley stable is the planet closest to the sun, Mercury, but this could just be that its path moves around more dude to its closenes to the centre of mass. All in all it seems like the Verlet method produced a good aproximation of our solar system
+We see that our algorithm produces nice, stable orbits for all the planets. The only planet which seem to not be completley stable is the planet closest to the sun, Mercury, but this could just be that its path moves around more dude to its closenes to the centre of mass. All in all it seems like the Verlet method produced a good aproximation of our solar system.
 
 \section{APENDICES}
 
